// Build plugins.
plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

// Compiler compliance.
sourceCompatibility = 11
targetCompatibility = 11

// Dependency repositories.
repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

// Dependency list.
dependencies {
    // Use JUnit test framework.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'

    // This dependency is used by the application.
    implementation 'org.apache.kafka:kafka-clients:3.2.1'
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.slf4j:slf4j-nop:2.0.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.4'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
}

jar {
    exclude("**/bin/**")
    exclude("**/etc/banner.txt")
}

// Test task.
test {
    useJUnitPlatform()
}

// Application packaging.
application {
    // Define the main class for the application.
    mainClass = 'com.akamai.siem.App'
}